--- a/bus_management/package.json
+++ b/bus_management/package.json
@@ -22,10 +22,12 @@
     "dotenv": "^16.3.1",
     "inquirer": "^9.2.7",
     "postgres": "^3.3.5",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.3",
-    "@types/node": "^20.3.2"
+    "@types/node": "^20.3.2",
+    "@types/uuid": "^9.0.2"
   }
 }
