--- a/bus_management/docker-compose.yml
+++ b/bus_management/docker-compose.yml
@@ -12,4 +12,5 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./.database-data:/var/lib/postgresql/data
+      - ./db_scripts:/docker-entrypoint-initdb.d  # Mount the directory containing SQL scripts
+    command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements", "-c", "log_statement=all"]
